--- a/roles/monitoring-agent/gmond/templates/gmond.conf.j2
+++ b/roles/monitoring-agent/gmond/templates/gmond.conf.j2
@@ -5,7 +5,7 @@
 globals {
   daemonize = yes
   setuid = yes
-  user = ganglia
+  user = nobody
   debug_level = 0
   max_udp_msg_len = 1472
   mute = no
@@ -22,7 +22,7 @@ globals {
  * tag that will wrap all hosts collected by this instance.
  */
 cluster {
-  name = "{{ ganglia_cluster_name }}"
+  name = "{{ ganglia_cluster_name.stdout }}"
   owner = "unspecified"
   latlong = "unspecified"
   url = "unspecified"
@@ -36,23 +36,23 @@ host {
 /* Feel free to specify as many udp_send_channels as you like.  Gmond
    used to only support having a single channel */
 udp_send_channel {
-  #bind_hostname = yes # Highly recommended, soon to be default.
+  bind_hostname = yes # Highly recommended, soon to be default.
                        # This option tells gmond to use a source address
                        # that resolves to the machine's hostname.  Without
                        # this, the metrics may appear to come from any
                        # interface and the DNS names associated with
                        # those IPs will be used to create the RRDs.
   #mcast_join = 239.2.11.71
-  host = 127.0.0.1
+  host = {{ ansible_default_ipv4.address }}
   port = 8649
-  ttl = 1
+  ttl = 10
 }
 
 /* You can specify as many udp_recv_channels as you like as well. */
 udp_recv_channel {
   #mcast_join = 239.2.11.71
   port = 8649
-  #bind = 239.2.11.71
+  bind = {{ ansible_default_ipv4.address }}
 }
 
 /* You can specify as many tcp_accept_channels as you like to share
